--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+react_frontend/node_modules
+proxy/node_modules
 /.pnp
 .pnp.js
 
@@ -22,4 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-configs.js
+.env
